<resources>
    <string name="app_name">Calculator</string>
    <string name="TeamName">Team A</string>
    <string name="button">+3 point</string>
    <string name="button2">+2 point</string>
    <string name="button3">+1 point</string>
    <string name="button4">RESET</string>
    <string name="Count">0</string>
    <string name="Result">0</string>
    <string name="equation">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="divide">/</string>
    <string name="add">+</string>
    <string name="multiply">*</string>
    <string name="subtraction">-</string>
    <string name="point">.</string>
    <string name="equal">=</string>
    <string name="reset">RESET</string>
    <string name="backspace">BACK</string>
</resources>