<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/Result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/Result"
        android:textSize="48sp"
        />

    <EditText
        android:id="@+id/equation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:inputType="numberDecimal"
        android:focusable="false"
        android:text="@string/equation"
        android:textSize="32sp"
        />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:columnCount="4"
        android:orientation="horizontal"
        android:rowCount="5">

        <Button
            android:id="@+id/seven"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="1"
            android:layout_column="0"
            android:onClick="AddString"
            android:text="@string/seven"
            android:textSize="32sp"
            />

        <Button
            android:id="@+id/eight"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="1"
            android:layout_column="1"
            android:onClick="AddString"
            android:text="@string/eight"
            android:textSize="32sp"
            />

        <Button
            android:id="@+id/nine"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="1"
            android:layout_column="2"
            android:onClick="AddString"
            android:text="@string/nine"
            android:textSize="32sp"
            />

        <Button
            android:id="@+id/devide"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="1"
            android:layout_column="3"
            android:onClick="AddString"
            android:text="@string/divide"
            android:textSize="32sp"
            />

        <Button
            android:id="@+id/four"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="2"
            android:layout_column="0"
            android:onClick="AddString"
            android:text="@string/four"
            android:textSize="32sp"
            />

        <Button
            android:id="@+id/five"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="2"
            android:layout_column="1"
            android:onClick="AddString"
            android:text="@string/five"
            android:textSize="32sp"
            />

        <Button
            android:id="@+id/six"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="2"
            android:layout_column="2"
            android:onClick="AddString"
            android:text="@string/six"
            android:textSize="32sp"
            />

        <Button
            android:id="@+id/multiply"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="2"
            android:layout_column="3"
            android:onClick="AddString"
            android:text="@string/multiply"
            android:textSize="32sp"
            />

        <Button
            android:id="@+id/one"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="3"
            android:layout_column="0"
            android:onClick="AddString"
            android:text="@string/one"
            android:textSize="32sp"
            />

        <Button
            android:id="@+id/two"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="3"
            android:layout_column="1"
            android:onClick="AddString"
            android:text="@string/two"
            android:textSize="32sp"
            />

        <Button
            android:id="@+id/three"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="3"
            android:layout_column="2"
            android:onClick="AddString"
            android:text="@string/three"
            android:textSize="32sp"
            />

        <Button
            android:id="@+id/subtraction"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="3"
            android:layout_column="3"
            android:onClick="AddString"
            android:text="@string/subtraction"
            android:textSize="32sp"
            />

        <Button
            android:id="@+id/zero"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:onClick="AddString"
            android:text="@string/zero"
            android:textSize="32sp"
            />

        <Button
            android:id="@+id/point"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:onClick="AddString"
            android:text="@string/point"
            android:textSize="32sp"
            />

        <Button
            android:id="@+id/add"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:onClick="AddString"
            android:text="@string/add"
            android:textSize="32sp"
            />

        <Button
            android:id="@+id/equal"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:onClick="Calc"
            android:text="@string/equal"
            android:textSize="32sp"
            />

        <Button
            android:id="@+id/reset"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="0"
            android:layout_column="2"
            android:onClick="Reset"
            android:text="@string/reset"
            android:textSize="32sp"
            />

        <Button
            android:id="@+id/back"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_row="0"
            android:layout_column="3"
            android:onClick="Back"
            android:text="@string/backspace"
            android:textSize="32sp"
            />

    </GridLayout>

</LinearLayout>