<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/TeamName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TeamName"
        android:textSize="32sp"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/Count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Count"
        android:textSize="80sp"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:textSize="32sp"
        android:layout_marginBottom="16dp"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button2"
        android:textSize="32sp"
        android:layout_marginBottom="16dp"
        />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button3"
        android:textSize="32sp"
        android:layout_marginBottom="16dp"
        />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="@string/button4" />
</LinearLayout>